--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
-sonar.github.oauth= <your oauthid generated in Github>
-sonar.github.repository= <organisation/repo>
-sonar.github.pullRequest= <Pull request number>
+sonar.github.oauth= 78cce7a4434be3cb78b89ea262082f091c440107 
+sonar.github.repository= kavyan27/test-build
+sonar.github.pullRequest= 10
